--- a/src/daipeproject/_config/config.yaml
+++ b/src/daipeproject/_config/config.yaml
@@ -2,20 +2,26 @@ parameters:
   datalake:
     base_path: '/%kernel.environment%'
 
-  loans:
-    repayments_csv_path: 'dbfs:/RepaymentsData.csv'
-
-  # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
-  #databricksbundle:
-  #  databricks_connect:
-  #    connection:
-  #      address: '%databricks.address%'
-  #      cluster_id: '[Your cluster ID]'
-
-  # overrides default bundle settings defined in site-packages/datalakebundle/_config/config.yaml
   datalakebundle:
     table:
       name_template: '%kernel.environment%_{identifier}'
       defaults:
         base_path: '%datalake.base_path%' # from config.yaml
         target_path: !expr 'base_path + "/" + db_identifier + "/" + table_identifier + ".delta"'
+
+  paths:
+    raw:
+      custom_attrs: "%datalake.base_path%/bronze/raw/custom_attrs"
+
+  datasets:
+    - id: "123"
+      name: "knihydobrovsky_cz"
+      custom_attrs:
+        105: "EXT_ID"
+        104: "ADFORM_ID"
+        2: "GA_ID"
+    - id: "4564"
+      name: "knihomol.cz"
+      custom_attrs:
+        3: "EXT_ID"
+        2: "GA_ID"
